Update Matterhorn repository plugin to properly set the path in the theodule js files

--- a/Matterhorn/templates/theodul/ui/templates/core_desktop.html
+++ b/Matterhorn/templates/theodul/ui/templates/core_desktop.html
@@ -17,7 +17,7 @@
   <!-- Timeline Plugin Container -->
   <div id="engage_timeline_plugin"></div>
   <div id="engage_timeline_expand_btn">
-    <img id="engage_timeline_expand_btn_img" src="/ilias44/Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn/templates/theodul/ui/img/pulldown.png" />
+    <img id="engage_timeline_expand_btn_img" src="/%iliasbasedir%/Customizing/global/plugins/Services/Repository/RepositoryObject/Matterhorn/templates/theodul/ui/img/pulldown.png" />
   </div>
 </div>
 
