Added missing css includes. Removed unused option1/2 from dialog. Fixed overview page

--- a/Matterhorn/templates/default/tpl.player.html
+++ b/Matterhorn/templates/default/tpl.player.html
@@ -1,5 +1,6 @@
 Playerbegin
 <script data-main="{INITJS}/ui/engage_init" src="{INITJS}/ui/js/lib/require.js"></script>
+<link rel="stylesheet" type="text/css" href="{INITJS}/ui/css/core_global_style.css" />
 <noscript>
      <div class="noJavaScript">
          <img src="img/MatterhornLogo_loading.png" id="loadingImg" />
