--- a/templates/default/tpl.table_matterhorn_row.html
+++ b/templates/default/tpl.table_matterhorn_row.html
@@ -1,14 +1,12 @@
 <tr class="{CSS_ROW}">
 <td class="std">
-{TXT_NR}
+<a href="{CMD_DOWNLOAD}"><img src="{PREVIEWURL}" /></a>
 </td>
 <td class="std">
-{TXT_TITLE}
+<a href="{CMD_DOWNLOAD}">{TXT_TITLE}</a>
+
 </td>
 <td class="std">
 {TXT_DATE}
-</td>
-<td class="std">
-<a href="{CMD_DOWNLOAD}">show</a>
 </td>
 </tr>
