--- a/templates/theodul/ui/css/core_desktop_style.css
+++ b/templates/theodul/ui/css/core_desktop_style.css
@@ -2,7 +2,7 @@
 
 body {
     min-width: 840px;
-    font-family: Arial, sans-serif;
+   /* font-family: Arial, sans-serif;*/
 }
 
 #btn_fullscreenCancel {
