--- a/templates/default/tpl.series.html
+++ b/templates/default/tpl.series.html
@@ -1,7 +1,45 @@
-<!-- BEGIN variable -->		
+<!-- BEGIN headerdownload -->     
+<H2>{TXT_FINISHED_RECORDINGS}</H2>
+<div class="ilTableOuter">
+<table class="fullwidth">
+<thead>
+<tr class="tblheader"><th class="std">{TXT_PREVIEW}</th><th class="std">{TXT_TITLE}</th><th class="std">{TXT_DATE}</th><th class="std">{TXT_ACTION}</th></tr>
+</thead>
+<tbody>
+<!-- END headerdownload -->       
+<!-- BEGIN header -->     
+<H2>{TXT_FINISHED_RECORDINGS}</H2>
+<div class="ilTableOuter">
+<table class="fullwidth">
+<thead>
+<tr class="tblheader"><th class="std">{TXT_PREVIEW}</th><th class="std">{TXT_TITLE}</th><th class="std">{TXT_DATE}</th></tr>
+</thead>
+<tbody>
+<!-- END header -->       
+<!-- BEGIN episodedownload -->     
+<tr>
+  <td class="std"><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" /></a></td>
+  <td class="std"><a href="{CMD_PLAYER}">{TXT_TITLE}</a></td>
+  <td class="std">{TXT_DATE}</td>
+  <td class="std"><a href="{DOWNLOADURL}">{TXT_DOWNLOAD}</a></td>
+</tr>
+<!-- END episodedownload -->       
+<!-- BEGIN episode -->     
+<tr>
+  <td class="std"><a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" /></a></td>
+  <td class="std"><a href="{CMD_PLAYER}">{TXT_TITLE}</a></td>
+  <td class="std">{TXT_DATE}</td>
+</tr>
+<!-- END episode -->       
+<!-- BEGIN footer -->     
+</tbody>
+</table>
+</div>
+<!-- END footer -->     
+<!-- BEGIN videodiv -->		
 <div class="videos">
-	<a href="{CMD_DOWNLOAD}">{TXT_TITLE}</a>
-	<a href="{CMD_DOWNLOAD}"><img src="{PREVIEWURL}" /></a>
+	<a href="{CMD_PLAYER}">{TXT_TITLE}</a>
+	<a href="{CMD_PLAYER}"><img src="{PREVIEWURL}" /></a>
         <span class="ilTableFootLight">{TXT_DATE}</span>
 </div>
-<!-- END variable -->		
+<!-- END videodiv -->
