--- a/templates/css/xmh.css
+++ b/templates/css/xmh.css
@@ -14,3 +14,10 @@
 .videos img {
     margin: 4px 0;
 }
+
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
