Added play from trimin and play to trimout functions

--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -74,9 +74,9 @@
     <div class="col-md-6"><span class="pull-right"><input name="trimout" value="{TRACKLENGTH}" id="trimout" ><button id="settrimout" type="button" class="btn btn-default"><span class="glyphicon"></span> {TXT_SET_TO_CURRENT_TIME}</button></div>
   </div>
   <div class="row top5">
-    <div class="col-md-6"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_INPOINT}</button>
+    <div class="col-md-6"><button type="button" class="btn btn-default" id="playtrimin"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_INPOINT}</button>
     </div>
-    <div class="col-md-6"><span class="pull-right"> <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_OUTPOINT}</button>   
+    <div class="col-md-6"><span class="pull-right"> <button type="button" class="btn btn-default" id="playtrimout"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_OUTPOINT}</button>   
     </span></div>
   </div>
   <div class="row top5"><button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div>
