Replaced the edit screen completly with javascript rendering. Fixed issues firefox due to missing webm

--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -41,7 +41,7 @@ var uploadtarget = "Customizing/global/plugins/Services/Repository/RepositoryObj
 <div class="ilTableOuter">
 <table class="fullwidth">
 <thead>
-<tr class="tblheader"><th class="std">{TXT_TITLE}</th><th class="std">{TXT_RECORDDATE}</th></tr>
+<tr class="tblheader"><th class="std">{TXT_TITLE}</th><th class="std">{TXT_RECORDDATE}</th><th class="std">{TXT_PROGRESS}</th><th>{TXT_RUNNING}</th></tr>
 </thead>
 <tbody id="processingtable">
 </tbody>
