--- a/templates/default/tpl.trimview.html
+++ b/templates/default/tpl.trimview.html
@@ -53,13 +53,14 @@
     <video id="mhpreviewvideo" class="center-block video-js vjs-default-skin"
       controls preload="auto" width="640" height="264"
       data-setup='{"inactivityTimeout": 0 }'>
-      <source src="{DOWNLOAD_PREVIEW_URL}" type='video/mp4' />
+      <source src="{DOWNLOAD_PREVIEW_URL_MP4}" type='video/mp4' />
+      <source src="{DOWNLOAD_PREVIEW_URL_WEBM}" type='video/webm' />
       <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
     </video>
   </div>
   <div class="row">
     <div class="col-md-6">    
-      <a href="{DOWNLOAD_PREVIEW_URL}" download>{TXT_DOWNLOAD_PREVIEW}</a>
+      <a href="{DOWNLOAD_PREVIEW_URL_MP4}" download>{TXT_DOWNLOAD_PREVIEW}</a>
     </div>
   </div>
   <div class="row top5"><div class="col-md-12">    <div id="slider-range" data-time="{TRACKLENGTH}"></div></div></div>
@@ -79,6 +80,6 @@
     <div class="col-md-6"><span class="pull-right"> <button type="button" class="btn btn-default" id="playtrimout"><span class="glyphicon glyphicon-play"></span>{TXT_PREVIEW_OUTPOINT}</button>   
     </span></div>
   </div>
-  <div class="row top5"><button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div>
+  <div class="row top5"><button type="submit" class="btn btn-primary" id="octrimbutton"><span class="glyphicon glyphicon-ok"></span> {TXT_CONTINUE}</button></div>
 </from>
 <!-- END formend -->  
