--- a/templates/default/tpl.series.edit.html
+++ b/templates/default/tpl.series.edit.html
@@ -103,7 +103,7 @@ var uploadtarget = "Customizing/global/plugins/Services/Repository/RepositoryObj
         <div id="results" class="panel"></div>Status:
         <div class="alert-box secondary"></div>
         <button class="btn btn-default" id="browseButton">+ {TXT_ADD_FILE}</button>
-        <button class="btn btn-primary" id="uploadFiles">{TXT_UPLOAD_FILE}</button>
+        <button class="btn btn-primary disabled" id="uploadFiles">{TXT_UPLOAD_FILE}</button>
     </div>
 </div>
 <script src="{INITJS}/resumable.js"></script>
